deployments/eth-proxy-probes.yaml
apiVersion: v1
kind: Service
metadata:
  name: eth-proxy-health
spec:
  ports:
    - port: 8080
      targetPort: 8088
  selector:
    app: eth-proxy
