deployments/eth-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eth-proxy-service
spec:
  type: NodePort
  selector:
    app: eth-proxy
  ports:
    - port: 8088
      targetPort: 8088
      nodePort: 30080  # Optional
