deployments/eth-proxy-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/plugins: key-auth-plugin
  name: eth-proxy-ingress
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /eth-proxy
            pathType: Prefix
            backend:
              service:
                name: eth-proxy-service
                port:
                  number: 8088
